# IntervueAI_Capstone

./: .gitignore  .python-version  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_all.sh
agents/: coordinator.py  feedback.py  feedback_agent.py  interview_agent.py  interview_planner.py  interviewer.py  jd_resume_matcher.py  resume_pdf_parser.py
backend_api/: feedback.py  jd.py  livekit_token.py  resume_handler.py  start_interview.py
configs/: config.yaml  livekit.yaml
heuristics/: engine.py
job_description/: JD-001.json  JD-001.txt  JD-002.json  JD-003.json  JD-004.json  JD-005.json  JD-006.json  JD-007.json  JD-008.json  JD-009.json  JD-010.json
logs/sessions/: 003db284-0afa-47a5-949e-33f0f55444e6.json  0c8c6ea9-ad24-4f21-8701-ba4f862e8394.json  1272b6b6-c0ca-4876-ac38-de81cb73d38f.json  (+80 more)
pre_training/: README.md  dataset_handler.py  evaluate_model.py  evaluation_results.json  pretrain_models.py  requirements.txt  test_causal_masking.py  test_ollama_models.py  train_custom_llama3.py  train_llama3.py  train_qlora.py  train_qlora_fixed.py  training_config.json  usage_example.py  utils.py
pre_training/models/: llama2.py  (+1 more)
prompts/: coordinator.0.txt  coordinator.1.txt  coordinator.2.txt  coordinator.3.txt  coordinator.4.txt  coordinator.txt  coordinator_ollama.txt  feedback.txt  interview_plan.txt  interview_planner.txt  interviewer.txt  jd_resume_matcher.txt  resume_pdf_parser.txt
utils/: interview_planner.py  jd_resume_matcher.py  llm.py  memory.py  pdf_parser.py  resume_pdf_parser.py  session.py  utils.py
(+14 files in other folders)
