[project]
name = "intervueai-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "livekit-agents~=1.0",
    "livekit-api>=1.0.2",
    "livekit-plugins-cartesia~=1.0",
    "livekit-plugins-deepgram~=1.0",
    "livekit-plugins-google~=1.0",
    "livekit-plugins-noise-cancellation>=0.2.0,<1.0.0",
    "livekit-plugins-openai~=1.0",
    "livekit-plugins-silero~=1.0",
    "livekit-plugins-turn-detector~=1.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
